--- a/scss/style.scss
+++ b/scss/style.scss
@@ -70,6 +70,20 @@ p {
     border-color: #4BBF73 !important;
 }
 
+.logo {
+    width: 150px;
+    height: auto;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+
+    img {
+        width: 100%;
+    }
+}
+
 .second-nav {
     padding-top: 15px;
     padding-left: 55px;
@@ -118,7 +132,7 @@ p {
 }
 
 .product-card {
-    border-radius: 20px;
+    // border-radius: 20px;
     padding-bottom: 5px !important;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     transition: all .1s !important;
