--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,21 @@ p {
   border-color: #4BBF73 !important;
 }
 
+.logo {
+  width: 150px;
+  height: auto;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 1000;
+}
+
+.logo img  {
+  width: 100%;
+}
+
 .second-nav {
   padding-top: 15px;
   padding-left: 55px;
@@ -117,7 +132,6 @@ p {
 }
 
 .product-card {
-  border-radius: 20px;
   padding-bottom: 5px !important;
   -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
           box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
