--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@ body {
   padding-bottom: 16rem;
   min-height: 91.7vh;
   height: 100%;
+  background: url("../assets/img/background.jpg") no-repeat center center;
+  background-size: cover;
 }
 
 p {
@@ -38,10 +40,15 @@ p {
 }
 
 .divider {
-  height: 2px;
-  width: 50px;
-  background-color: rgba(26, 26, 26, 0.6);
+  height: 3px;
+  width: 150px;
   margin: 10px auto 30px;
+  background: #FDFC47;
+  /* fallback for old browsers */
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-gradient(linear, left top, right top, from(rgba(73, 187, 112, 0.7)), to(#FFDC00));
+  background: linear-gradient(to right, rgba(73, 187, 112, 0.7), #FFDC00);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .small-divider {
@@ -62,15 +69,33 @@ p {
 }
 
 .navbar a:hover {
-  color: #4BBF73 !important;
+  color: rgba(73, 187, 112, 0.7) !important;
 }
 
-.navbar-brand:hover {
-  border-color: #4BBF73 !important;
+.slogan {
+  text-shadow: 0px 1px 2pxrgba 0, 0, 0, 0.05;
+}
+
+.left-stick {
+  height: 6px;
+  width: 30px;
+  margin-right: 20px;
+  background-color: rgba(73, 187, 112, 0.7) !important;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+          box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+}
+
+.right-stick {
+  height: 6px;
+  width: 30px;
+  margin-left: 20px;
+  background-color: #FFDC00 !important;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+          box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
 
 .logo {
-  width: 150px;
+  width: 120px;
   height: auto;
   position: absolute;
   top: 80%;
@@ -80,8 +105,12 @@ p {
   z-index: 1000;
 }
 
-.logo img  {
+.logo-img {
   width: 100%;
+}
+
+.nav-icon {
+  color: #FFDC00 !important;
 }
 
 .second-nav {
