--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@ body {
   padding-bottom: 16rem;
   min-height: 91.7vh;
   height: 100%;
+  background: url("../assets/img/background.jpg") no-repeat center center;
+  background-size: cover;
 }
 
 p {
@@ -38,10 +40,11 @@ p {
 }
 
 .divider {
-  height: 2px;
-  width: 50px;
-  background-color: rgba(26, 26, 26, 0.6);
+  height: 6px;
+  width: 30px;
   margin: 10px auto 30px;
+  background: rgba(73, 187, 112, 0.7);
+  /* fallback for old browsers */
 }
 
 .small-divider {
@@ -62,15 +65,33 @@ p {
 }
 
 .navbar a:hover {
-  color: #4BBF73 !important;
+  color: rgba(73, 187, 112, 0.7) !important;
 }
 
-.navbar-brand:hover {
-  border-color: #4BBF73 !important;
+.slogan {
+  text-shadow: 0px 1px 2pxrgba 0, 0, 0, 0.05;
+}
+
+.left-stick {
+  height: 6px;
+  width: 30px;
+  margin-right: 20px;
+  background-color: rgba(73, 187, 112, 0.7) !important;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+          box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+}
+
+.right-stick {
+  height: 6px;
+  width: 30px;
+  margin-left: 20px;
+  background-color: #FFDC00 !important;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+          box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
 
 .logo {
-  width: 150px;
+  width: 120px;
   height: auto;
   position: absolute;
   top: 80%;
@@ -80,8 +101,12 @@ p {
   z-index: 1000;
 }
 
-.logo img  {
+.logo-img {
   width: 100%;
+}
+
+.nav-icon {
+  color: #FFDC00 !important;
 }
 
 .second-nav {
@@ -353,6 +378,15 @@ input.form-control {
 
 .toggle-btn:hover {
   background-color: #F2F2F2 !important;
+}
+
+.card-payment {
+  min-width: 500px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 footer {
