--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,9 @@ body {
     padding-bottom: 16rem;
     min-height: 91.7vh;
     height: 100%;
+
+    background: url("../assets/img/background.jpg") no-repeat center center; 
+    background-size: cover;
 }
 
 p {
@@ -35,10 +38,12 @@ p {
 }
 
 .divider {
-    height: 2px;
-    width: 50px;
-    background-color: rgba(26, 26, 26, .6);
+    height: 6px;
+    width: 30px;
     margin: 10px auto 30px;
+    background: rgba(73, 187, 112, 0.7);  /* fallback for old browsers */
+    // background: -webkit-linear-gradient(to right, rgba(73, 187, 112, 0.7), #FFDC00);  /* Chrome 10-25, Safari 5.1-6 */
+    // background: linear-gradient(to right, rgba(73, 187, 112, 0.7), #FFDC00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .small-divider {
@@ -62,26 +67,46 @@ p {
     }
     
     a:hover {
-        color: #4BBF73 !important;
+        color: rgba(73, 187, 112, 0.7) !important;
     }
 }
 
-.navbar-brand:hover {
-    border-color: #4BBF73 !important;
+.slogan {
+    text-shadow: 0px 1px 2pxrgba(0,0,0,0.05);
+}
+
+.left-stick {
+    height: 6px;
+    width: 30px;
+    margin-right: 20px;
+    background-color: rgba(73, 187, 112, 0.7) !important;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+}
+
+.right-stick {
+    height: 6px;
+    width: 30px;
+    margin-left: 20px;
+    background-color: #FFDC00 !important;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
 
 .logo {
-    width: 150px;
+    width: 120px;
     height: auto;
     position: absolute;
     top: 80%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
+}
 
-    img {
-        width: 100%;
-    }
+.logo-img {
+    width: 100%;
+}
+
+.nav-icon {
+    color: #FFDC00 !important;
 }
 
 .second-nav {
@@ -357,6 +382,15 @@ input.form-control {
     background-color: #F2F2F2 !important;
 }
 
+
+// PAYMENT ===========
+.card-payment {
+    min-width: 500px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 
 // FOOTER ===========
