--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,6 +62,8 @@ p {
 // NAVBAR
 .navbar {
     padding: {
+        top: 20px;
+        bottom: 0px;
         left: 50px;
         right: 50px;
     }
@@ -71,8 +73,12 @@ p {
     }
 }
 
+.branding:hover {
+    text-decoration: none;
+}
+
 .slogan {
-    text-shadow: 0px 1px 2pxrgba(0,0,0,0.05);
+    text-shadow: 0px 1px 2px rgba(0,0,0,0.05) !important;
 }
 
 .left-stick {
@@ -112,15 +118,14 @@ p {
 .second-nav {
     padding-top: 15px;
     padding-left: 55px;
-    margin-top: 80px;
+    margin-top: 60px;
 
     a {
         transition: all .1s;
     }
 
     a:hover {
-        color: #F0AD4E !important;
-        transform: scale(1.1);
+        color: #7ECE9A !important;
     }
 }
 
@@ -427,11 +432,23 @@ footer {
 // Under Desktop //
 @media screen and (max-width: 992px) {
 
+    // General
+    .container-fluid {
+        padding: 0 50px;
+    }
+
     // Navbar
-    .search-bar {
-        position: absolute;
-        left: 230px;
-        top: 17px;
+    .navbar {
+        padding-bottom: 20px;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .branding {
+        width: 100%;
+        margin: 0 auto;
     }
 
     .navbar-nav {
@@ -445,9 +462,15 @@ footer {
         display: none !important;
     }
 
+    .navbar-toggler {
+        position: absolute;
+        right: 15px;
+        top: 10px;
+    }
+
     // Home
     #carouselExampleIndicators {
-        margin-top: 85px;
+        margin-top: 150px;
     }
 
     .page-container {
@@ -496,6 +519,15 @@ footer {
 // Tablet //
 @media screen and (max-width: 768px) {
 
+    // Carousel
+    .carousel {
+        display: none;
+    }
+
+    .tous-nos-produits {
+        margin-top: 150px !important;
+    }
+
     // Cart
     .cart-table, .total-group {
         transform: scale(.8);
@@ -522,9 +554,7 @@ footer {
 @media screen and (max-width: 710px) {
 
     // Navbar
-    .search-input {
-        width: 150px !important;
-    }
+
 
 }
 
@@ -532,8 +562,6 @@ footer {
 @media screen and (max-width: 580px) {
 
     // Navbar
-    .search-bar{
-        display: none
-    }
+
 
 }
