--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,7 @@ body {
     margin: 0;
     background-color: #F9F9F9;
     padding-bottom: 16rem;
-    min-height: 91.7vh;
+    min-height: 93.7vh;
     height: 100%;
 
     background: url("../assets/img/background.jpg") no-repeat center center; 
@@ -26,7 +26,7 @@ p {
 }
 
 .container-fluid {
-    padding: {
+    padding: { 
         left: 150px;
         right: 150px;
     }
@@ -60,13 +60,21 @@ p {
 
 
 // NAVBAR
-.navbar {
+.navbar-front {
     padding: {
         top: 20px;
-        bottom: 0px;
+        bottom: 10px;
         left: 50px;
         right: 50px;
     }
+    
+    a:hover {
+        color: rgba(73, 187, 112, 0.7) !important;
+    }
+}
+
+.navbar-back {
+    padding: 20px 50px 40px;
     
     a:hover {
         color: rgba(73, 187, 112, 0.7) !important;
@@ -101,7 +109,7 @@ p {
     width: 120px;
     height: auto;
     position: absolute;
-    top: 80%;
+    top: 85%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
@@ -350,6 +358,11 @@ input.form-control {
 }
 
 
+// SIGNUPFORM ============
+.form-container {
+    background-color: #fff !important;
+}
+
 
 // CONTACT FORM ============
 .form-envelope {
@@ -438,7 +451,24 @@ footer {
     }
 
     // Navbar
-    .navbar {
+    .fo-btn {
+        position: absolute !important;
+        left: 250px !important;
+        top: 22px !important;
+    }
+
+    .bo-btn {
+        display: none !important;
+    }
+
+    .bo-btn-small {
+        display: block !important;
+        position: absolute !important;
+        left: 15px !important;
+        top: 15px !important;
+    }
+
+    .navbar-front {
         padding-bottom: 20px;
     }
 
@@ -462,10 +492,18 @@ footer {
         display: none !important;
     }
 
-    .navbar-toggler {
+    .navbar-toggler-front {
         position: absolute;
         right: 15px;
         top: 10px;
+    }
+
+    .greeting {
+        display: none;
+    }
+
+    .nav-item-bo {
+        margin-left: 20px !important;
     }
 
     // Home
