--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,8 +12,8 @@ body {
     padding: 0;
     margin: 0;
     background-color: #F9F9F9;
-    padding-bottom: 16rem;
-    min-height: 93.7vh;
+    padding-bottom: 25rem;
+    min-height: 100vh;
     height: 100%;
 
     background: url("../assets/img/background.jpg") no-repeat center center; 
@@ -411,15 +411,52 @@ input.form-control {
 }
 
 
+// PRIVACY POLICY ===========
+#privacy-policy {
+
+    h4 {
+        margin-top: 30px;
+        font-family: Arial, Helvetica, sans-serif;
+        letter-spacing: .1rem;
+    }
+
+    p {
+        margin-top: 10px;
+    }
+}
+
+
 // FOOTER ===========
 footer {
     width: 100%;
     position: absolute;
-    height: 80px;
-    bottom: 0;
+    height: 300px;
+    bottom: -10%;
     left: 0;
     right: 0;
 }
+
+.divider-footer{
+    width: 100px !important;
+    height: 1px !important;
+    margin: 10px auto 30px;
+    background-color: rgba(0, 0, 0, 0.15) !important;
+}
+
+.footer-services {
+
+    h6 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        letter-spacing: 2px;
+    }
+    
+    .footer-links {
+        font-size: .6rem;
+    }
+
+}
+
 
 .flag-img {
     width: 30px !important;
@@ -435,7 +472,7 @@ footer {
 }
 
 .social-icon {
-    font-size: 1.3rem;
+    font-size: 2rem;
     opacity: .7;
 }
 
@@ -550,12 +587,20 @@ footer {
     // Footer
     footer {
         bottom: 0px !important;
+
+        .footer-section {
+            margin: 0 40px !important;
+        }
     }
 
 }
 
 // Tablet //
 @media screen and (max-width: 768px) {
+
+    body{
+        padding-bottom: 500px;
+    }
 
     // Carousel
     .carousel {
@@ -573,8 +618,8 @@ footer {
 
     // Footer 
     footer {
-        height: 140px;
-
+        height: 300px;
+        bottom: 0;
     }
 
     .footer-container {
@@ -589,17 +634,15 @@ footer {
 
 }
 
-@media screen and (max-width: 710px) {
+@media screen and (max-width: 1250px) and (min-width: 968px) {
 
-    // Navbar
+    body{
+        padding-bottom: 500px;
+    }
 
-
-}
-
-// Smartphones // 
-@media screen and (max-width: 580px) {
-
-    // Navbar
-
+    footer {
+        height: 300px;
+        bottom: 0;
+    }
 
 }
